feat: more layout changes

--- a/src/locale/locale-en_US.json
+++ b/src/locale/locale-en_US.json
@@ -1,8 +1,18 @@
 {
+  "state.publications.alternative-culture.label": "ALTERNATIVE CULTURE",
+  "state.publications.nature-and-biodiversity.label": "NATURE AND BIODIVERSITY",
+  "state.publications.climate-and-energy.label": "CLIMATE AND ENERGY",
+  "state.publications.community.label": "COMMUNITY",
+  "state.publications.discover.label": "DISCOVER",
+  "state.publications.food.label": "FOOD",
+  "state.publications.gardens.label": "GARDENS",
+  "state.publications.zero-waste.label": "ZERO WASTE",
+  "state.all.label": "ALL",
   "headline.home": "HOME",
   "headline.map": "MAP",
   "headline.about": "ABOUT",
   "headline.contact": "CONTACT",
+  "headline.search": "SEARCH",
   "state.authors.law.title": "Law",
   "field.label.title": "title", 
   "modals.addreview.field.reviewers.label": "add reviewer", 
