feat: more layout changes

--- a/src/locale/locale-en_US.json
+++ b/src/locale/locale-en_US.json
@@ -14,7 +14,8 @@
   "headline.contact": "CONTACT",
   "headline.search": "SEARCH",
   "button.add.project": "Add your project",
-  "header.map.label": "MAP",
+  "header.map.label": "Map",
+  "header.projects.label": "Projects",
   "state.authors.law.title": "Law",
   "field.label.title": "title", 
   "modals.addreview.field.reviewers.label": "add reviewer", 
