feat: lang conversion to json and new pics

--- a/src/locale/locale-de_DE.json
+++ b/src/locale/locale-de_DE.json
@@ -128,9 +128,9 @@
     "field.label.upload.title": "Einen Titel hinzuf\u00fcgen",
     "filterby.authors__slug": "von",
     "footer.guideforauthors": "Hinweise f\u00fcr Autoren/innen",
-    "footer.home": "Startseite",
+    "footer.home": "HOME",
     "footer.latest_rss": "aktuelle Nachrichten",
-    "footer.termsofservice": "Nutzungsbedingungen",
+    "footer.termsofservice": "NUTZNGSBEDINGUNGEN",
     "headline.about": "\u00dcber uns",
     "headline.assign.all": "\u00dcberpr\u00fcfungen zuweisen",
     "headline.assign.all.abstract": "Here k\u00f6nnen Sie \u00dcberpr\u00fcfungen zuweisen. Beachten Sie ihrem eigenen Beitrag keine Pr\u00fcfer zuweisen k\u00f6nnen",
