--- a/src/locale/locale-en_US.json
+++ b/src/locale/locale-en_US.json
@@ -128,9 +128,9 @@
     "field.label.upload.title": "Add a title",
     "filterby.authors__slug": "by",
     "footer.guideforauthors": "guide for authors",
-    "footer.home": "home",
+    "footer.home": "HOME",
     "footer.latest_rss": "latest news",
-    "footer.termsofservice": "terms of use",
+    "footer.termsofservice": "TERMS OF USE",
     "headline.about": "about",
     "headline.assign.all": "assign reviews",
     "headline.assign.all.abstract": "Here you can assign reviews. Please note that you can't assign reviewers to your own contribution.",
