--- a/src/locale/locale-fr_FR.json
+++ b/src/locale/locale-fr_FR.json
@@ -130,7 +130,7 @@
     "footer.guideforauthors": "instructions aux auteurs",
     "footer.home": "accueil",
     "footer.latest_rss": "derni\u00e8res nouvelles",
-    "footer.termsofservice": "notice l\u00e9gale",
+    "footer.termsofservice": "NOTICE LEGALE",
     "headline.about": "\u00e0 propos de ",
     "headline.assign.all": "",
     "headline.assign.all.abstract": "",
