feat: new translations

--- a/src/locale/locale-de_DE.json
+++ b/src/locale/locale-de_DE.json
@@ -490,5 +490,6 @@
     "headline.contact": "KONTAKT",
     "button.add.project": "Projekt hinzufügen",
     "header.map.label": "Karte",
-    "header.projects.label": "Projekte"
+    "header.projects.label": "Projekte",
+    "choose.category": "KATEGORIE WÄHLEN"
 }
