feat: fix toggle menu

--- a/src/locale/locale-de_DE.json
+++ b/src/locale/locale-de_DE.json
@@ -462,7 +462,7 @@
     "headline.search": "SUCHE",
     "button.createorupdate": "",
     "organisation": "Organisation",
-    "articletype": "Art des Artikels",
+    "articletype": "Kategorien",
     "copyright.checkbox.label": "Ich bin Urheber des Bildes oder habe die Erlaubnis des Urhebers das Bild zu teilen",
     "copyright.checkbox.text": "Falls Sie das Bild nicht selbst aufgenommen haben, ist es wahrscheinlich durch das Urheberrecht gesch\u00fctzt und es ist Ihnen nicht erlaubt das Bild hochzuladen. Alternativ k\u00f6nnen Sie Creative Commons Bilder verwenden. Mehr Informationen dazu finden Sie in unserem <a href='https://www.aktioun-nohaltegkeet.lu/guide-for-authors' target='_blank'>Handbuch f\u00fcr Autoren*innen</a>.",
     "write": "Schreiben",
