--- a/src/locale/locale-en_US.json
+++ b/src/locale/locale-en_US.json
@@ -462,7 +462,7 @@
     "headline.search": "SEARCH",
     "button.createorupdate": "Create or update",
     "organisation": "Organization",
-    "articletype": "Article type",
+    "articletype": "Categories",
     "copyright.checkbox.label": "I am the copyright owner of the picture or have the permission of the copyright owner to share the picture",
     "copyright.checkbox.text": "If you did not take the picture yourself, it most likely is protected by copyright and you are not allowed to upload it. Alternatively, you can upload a creative commons picture. For more information on this, you can check our <a href='https://www.aktioun-nohaltegkeet.lu/guide-for-authors' target='_blank'>guide for authors.</a>",
     "write": "Write",
