--- a/src/locale/locale-fr_FR.json
+++ b/src/locale/locale-fr_FR.json
@@ -462,7 +462,7 @@
     "headline.search": "RECHERCHE",
     "button.createorupdate": "Cr\u00e9er ou modifier",
     "organisation": "Organisation",
-    "articletype": "Type d'article",
+    "articletype": "Categories",
     "copyright.checkbox.label": "I am the copyright owner of the picture or have the permission of the copyright owner to share it",
     "copyright.checkbox.text": "If you did not take the picture yourself but got it from another source, it most likely is protected by copyright and you cannot upload it. Alternatively, you can upload a creative commons picture. We recommend using CC Search (link: <a href='https://ccsearch.creativecommons.org' target='_blank'>https://ccsearch.creativecommons.org/</a>) to find creative commons pictures as it automatically provides the correct attribution. For more information on this, you can have look at the <a href='https://www.aktioun-nohaltegkeet.lu/guide-for-authors' target='_blank'>user\u2019s guide</a>.",
     "write": "",
